--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -211,7 +211,8 @@ body {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    font-weight: bold;
+  
     font-size: 10px;
     margin-right: 10px;
+    color:#e5f6ff
   }
