--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -35,7 +35,7 @@ body {
   .message {
     background-color: #f6f6f6;
     color: #333;
-    border-radius: 15px;
+    border-radius: 13px 13px 13px 2px;
     padding: 12px 18px;
     max-width: 70%;
     word-wrap: break-word;
@@ -55,8 +55,16 @@ body {
     font-weight: bold;
     margin-bottom: 4px;
     color: #888;
+
   }
 
+  .user-name-center {
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 4px;
+    color: #888;
+    text-align: center;
+  }
   .input-container {
     display: flex;
     margin-top: 15px;
@@ -161,7 +169,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 5px;
-    
+    border-radius: 13px 13px 13px 2px;
   }
 
   
@@ -193,6 +201,7 @@ body {
     line-height: 20px;
     white-space: pre-line;
     border: 1px solid var(--color-content-ghost,#8c8c8c);
+    border-radius: 12px 12px 2px 13px;
 }
 
 
@@ -206,6 +215,7 @@ body {
     line-height: 20px;
     white-space: pre-line;
     border: 1px solid var(--color-content-ghost, #8c8c8c);
+    border-radius: 13px 13px 13px 2px;
 }
 
 .timestamp {
@@ -245,7 +255,7 @@ body {
     justify-content: center;
     position: relative;
     top: 67px;
-    left: 1px;
+    left: 0px;
     width: 25px;
     height: 25px;
     border-radius: 50%;
