--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -55,15 +55,42 @@ body {
     font-weight: bold;
     margin-bottom: 4px;
     color: #888;
+    margin-left: -30px;
 
   }
+  .user-item {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 40px;
+    overflow-y: auto;
+    padding-right: 10px;
+    scrollbar-width: thin;
+    scrollbar-color: #ccc transparent;
+  }
 
+ .user-item::-webkit-scrollbar {
+    width: 8px;
+  }
+
+ .user-item::-webkit-scrollbar-thumb {
+    background-color: #bbb;
+    border-radius: 10px;
+  }
+
+ .user-item::-webkit-scrollbar-thumb:hover {
+    background-color: #999;
+  }
+
+ .user-item::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
   .user-name-center {
     font-size: 12px;
     font-weight: bold;
     margin-bottom: 4px;
     color: #888;
-    text-align: center;
+    
   }
   .input-container {
     display: flex;
