--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -59,32 +59,10 @@ body {
 
   }
   .user-item {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 40px;
-    overflow-y: auto;
-    padding-right: 10px;
-    scrollbar-width: thin;
-    scrollbar-color: #ccc transparent;
+    padding: 5px;
   }
 
- .user-item::-webkit-scrollbar {
-    width: 8px;
-  }
 
- .user-item::-webkit-scrollbar-thumb {
-    background-color: #bbb;
-    border-radius: 10px;
-  }
-
- .user-item::-webkit-scrollbar-thumb:hover {
-    background-color: #999;
-  }
-
- .user-item::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
   .user-name-center {
     font-size: 12px;
     font-weight: bold;
@@ -365,6 +343,22 @@ body {
     .user-list-scroll {
       max-height: 200px;
       overflow-y: auto;
+    }
+    .user-list-scroll::-webkit-scrollbar {
+      width: 8px;
+    }
+  
+   .user-list-scroll::-webkit-scrollbar-thumb {
+      background-color: #bbb;
+      border-radius: 10px;
+    }
+  
+   .user-list-scroll::-webkit-scrollbar-thumb:hover {
+      background-color: #999;
+    }
+  
+   .user-list-scroll::-webkit-scrollbar-track {
+      background-color: transparent;
     }
   
     #search-user {
