--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -55,11 +55,15 @@ body {
     font-weight: bold;
     margin-bottom: 4px;
     color: #888;
-    margin-left: -30px;
+   
 
   }
   .user-item {
     padding: 5px;
+    white-space: nowrap; /* Impede que o texto seja quebrado em várias linhas */
+    overflow: hidden; /* Oculta o conteúdo que não cabe */
+    text-overflow: ellipsis; /* Exibe três pontos quando o texto é cortado */
+    max-width: 100%; /* Garante que o texto não exceda a largura do contêiner */
   }
 
 
