--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -193,6 +193,8 @@ body {
     margin-top: 2px;
     border: 1px solid var(--color-content-ghost,#8c8c8c);
     border-radius: 13px 13px 13px 2px;
+    max-width: 100%; /* Define a largura máxima como 100% do contêiner pai */
+    max-height: 100vh;
 }
 
 .audio {
