--- a/estilo-chat.css
+++ b/estilo-chat.css
@@ -269,6 +269,8 @@ body {
   white-space: pre-line;
   border: 1px solid var(--color-content-ghost, #8c8c8c);
   border-radius: 13px 13px 13px 2px;
+  max-width: 100%; /* Define a largura máxima como 100% do contêiner pai */
+  max-height: 50vh; 
 }
 
 .timestamp {
